<resources>
    <string name="app_name">إبن عمي</string>
    <string name="sayHello">Hello IbnAmmys again</string>
    <string name="signInText">تسجيل دخول</string>
    <string name="email_ed_hint"> البريد الالكتروني </string>
    <string name="password_ed_hint">كلمة المرور</string>
    <string name="confirm_password_ed_hint"> تأكيد كلمة المرور</string>

    <string name="signIn_btn_txt">دخول</string>
    <string name="signUp_btn_txt">تسجيل حساب جديد</string>
    <string name="phone_number">رقم الهاتف 01xx , 009xx</string>

    <string-array name="years_array">
        <item>السنة</item>
        <item>1920</item>
        <item>1930</item>
        <item>1940</item>
    </string-array>

    <string-array name="months_array">
        <item>الشهر</item>
        <item>يناير</item>
        <item>فبراير</item>
        <item>مارس</item>
        <item> ابريل</item>
        <item>مايو </item>
        <item>يونيو </item>
        <item> يوليو</item>
        <item> اغسطس</item>
        <item> سبتمبر</item>
        <item> اكتوبر</item>
        <item>نوفمبر </item>
        <item>ديسمبر </item>
    </string-array>

    <string-array name="days_array">
        <item>اليوم</item>
        <item> 1 </item>
        <item>2 </item>
        <item>3 </item>
        <item> 4</item>
        <item>5 </item>
        <item> 6</item>
        <item> 7</item>
        <item>8 </item>
        <item>9 </item>
        <item>10 </item>
    </string-array>
    <string-array name="phone_array">
        <item>010</item>
        <item>012</item>
        <item>011</item>
        <item>015</item>
    </string-array>
    <string-array name="family_array">
        <item>عائلة النجار</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="marital_status_array">
        <item>الحالة الاجتماعية</item>
        <item>متزوج / متزوجة</item>
        <item>مطلق / مطلقة</item>
        <item>أعزب / عزباء</item>
        <item>أرمل / أرملة</item>
        <item>منفصل / منفصلة</item>
        <item>باحث عن زوج(ة)</item>
    </string-array>

    <string-array name="countries_array">
        <item> الدولة </item>
        <!--   <item> مصر </item>
        <item>الامارات  </item>-->
    </string-array>

    <string-array name="districts_array">
        <item>المحافظة / الأمارة</item>
        <item> القاهرة </item>
        <item>بورسعيد</item>
        <item>دبي </item>
        <item> ابو ظبي </item>
    </string-array>

    <string-array name="blood_type_array">
        <item>فصيلة الدم</item>

        <item>O-</item>
        <item> O+ </item>
        <item>A-</item>
        <item>A+</item>
        <item> B-</item>
        <item> B+</item>
        <item> AB-</item>
        <item> AB+</item>
        <item>لا اعلم</item>

    </string-array>

    <string-array name="job_type1">
        <item>صاحب مؤسسة</item>
        <item>اعمال حرة</item>
        <item>حرفي</item>
    </string-array>

    <string-array name="job_type2">
        <item>موظف</item>
        <item>طالب</item>
        <item>غير موظف</item>
        <item>يبحث عن وظيفة</item>
    </string-array>

    <string-array name="service_type">
        <item>طبيب</item>
        <item>مهندس</item>
        <item>محامى</item>
    </string-array>

    <string-array name="specializations_list">
        <item>مهندس مدني </item>
        <item>محامي نقض</item>
        <item>طبيب اسنان</item>

    </string-array>
    <string-array name="organization_name">
        <item>لا املك مؤسسة</item>
        <item>مؤسسة 1</item>
        <item>مؤسسة 2</item>
        <item>مؤسسة 3</item>
    </string-array>
    <string-array name="relation_type">
        <item>نوع القرابة</item>
        <item>اخ</item>
        <item>اخت</item>
        <item>ام</item>
        <item>اب</item>
        <item>ابن</item>
    </string-array>

    <string-array name="gender">
        <item>النوع</item>
        <item>ذكر</item>
        <item>أنثي</item>
    </string-array>

    <string-array name="card_type">
        <item>Visa</item>
        <item>Master Card</item>
    </string-array>


    <!-- Aya Strings-->
    <string name="action_alert">Alert</string>
    <string name="action_search">Search</string>
    <string name="title_activity_bottom_tap">BottomTapActivity</string>

    <string-array name="ProvideServiceList">
        <item>التخصص</item>
        <!--<item>اطباء</item>
        <item>محامين</item>
        <item>سائقين</item>
        <item>مهندسين</item>
        <item>محاسبين</item>
        <item>طباخين</item>-->

    </string-array>

    <integer-array name="SideMenuIcons">


        <item>@mipmap/ic_home_page</item>
        <item>@mipmap/ic_my_page</item>
        <item>@mipmap/ic_settings</item>
        <item>@mipmap/ic_my_ad</item>
        <item>@mipmap/ic_my_alert</item>
        <item>@mipmap/ic_message</item>

    </integer-array>

    <string-array name="citiesList">
        <item>المدينه</item>

    </string-array>

    <string-array name="requestHelpList">
        <item>حاله الاستغاثه </item>
        <item>  حادثة على الطريق</item>
        <item> إعتداء على المنزل </item>
        <item> رهن الاحتجاز </item>
        <item> طوارئ صحية </item>

    </string-array>

    <string-array name="manorList">
        <item>عزبة</item>
    </string-array>

    <string-array name="villageList">
        <item>القريه</item>
    </string-array>

    <string-array name="typeOfRequestList">
        <item> البحث عن </item>
        <!--  <item>الباحث عن وظيفة</item>
        <item>الباحث عن زوج(ة)</item>
        <item>ـــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــــ</item>
        <item>تكنولوجيا/ميديا</item>
        <item>ورش و صيانة</item>
        <item>مصانع</item>
        <item>مكتب محاماه</item>
        <item>مؤسسات طبية</item>
        <item>اخرى</item>-->
    </string-array>

    <string-array name="cat_type">
        <item>رجل اعمال/حرفي</item>
        <item>موظف</item>
        <item>غير موظف</item>
    </string-array>

    <string-array name="UnEmplyeeList">
        <item>طالب  </item>
        <item>باحث عن وظيفه</item>
        <item>معاش</item>
        <item>ربة منزل</item>
    </string-array>
    <string-array name="EmplyeeList">
        <item>وزارة المالية </item>
        <item>وزارة التربية والتعليم </item>
        <item>وزارة الاسكان </item>
        <item>وزارة الصحة </item>
        <item>وزارة العدل </item>
        <item>وزارة التموين </item>

    </string-array>

    <string-array name="BusinessManList">
        <item>مؤسسات طبية</item>
        <item>مصانع</item>
        <item>مقاولات</item>
        <item>مزارع</item>
        <item>تجارة عامة</item>
        <item>اصحاب الحرف والمهن </item>
    </string-array>

    <string-array name="coins">
        <item>جنيه</item>
        <item>ريال سعودي</item>
        <item>دولار</item>
        <item>دينار كويتي</item>
        <item>درهم اماراتي </item>
    </string-array>

    <string name="error_no_data_found">لا يوجد بيانات </string>
    <string name="no_member">لا يوجد اعضاء</string>
    <string name="no_cousin_data_found">لا يوجد </string>
    <string name="error_search_result">لا يوجد نتائج للبحث </string>
    <string name="search_text"> اكتب الخدمة المطلوبة</string>
    <string name="search_name"> الاسم الاول </string>


    <string name="not_activated">لم يتم التفعيل بعد </string>
    <string name="not_activated_one">سوف يتم تفعيل هذه الخاصيه بمجرد </string>
    <string name="not_activated_two"> وصول اعداد المشتركين 25 الف مشترك رئيسي او 125 الف تعداد عام ايهما الاول </string>

    <!--Change Password Page-->
    <string name="error_input">  خطأ فى الادخال </string>
    <string name="current_password">كلمة المرور الحالية </string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="retype_new_password">تأكيد كلمة المرور الجديدة </string>
    <string name="update_password">تحديث</string>
    <string name="error_password"> كلمة المرور لا ينبغي ان تكون اقل من ٣ احرف / ارقام </string>
    <string name="error_not_match"> لا تتطابق مع كلمة المرور الجديدة </string>
    <string name="password_error">لا يمكن التحقق من كلمة المرور الحالية يرجى المحاولة مرة اخرى</string>
    <string name="password_success">لقد تم تغير كلمة المرور بنجاح</string>
    <string name="internet_error">خطأ فى الإنترنت</string>

    <!-- Map Search Page-->
    <string name="search_empty">يجب ادخال بيانات للبحث </string>
    <string name="request_help_empty">يجب ادخال حاله الاستغاثه </string>
    <string name="add_help_success"> تم إضافة حاله الاستغاثة بنحاج  </string>
    <string name="map_location"> للاستفادة من هذه الخدمة ، لابد من استخدام احداثيات الموقع  </string>
    <string name="current_location"> موقعك الحالى  </string>
    <string name="register_location">  موقعك المسجل  </string>
    <string name="no_location">لا يوجد موقع مسجل، برجاء تحديث بياناتك</string>
    <string name="no_search_result">لا يوجد نتائج البحث</string>
    <string name="not_allow_to_chat">غير مسموح بإجراء محادثة </string>
    <string name="install_whatsapp">يجب تنزيل تطبيق واتساب لاجراء محادثة </string>
    <string name="error">حدث  خطأ </string>
    <string name="allow_to_call">يجب السماح لإجراء اتصال </string>
    <string name="female">أنثي</string>
    <string name="male">ذكر</string>
    <string name="version_name">الإصدار :1.4</string>

    <!-- Favourite Search Page-->
    <string name="add_favourite_success"> تم الأضافة فى قائمة المفضلة  </string>
    <string name="delete_favourite_success">تم المسح من قائمة المفضلة  </string>
    <string name="no_favourite"> لا يوجد قائمة مفضلة </string>
    <string name="error_favourite"> حدث خطأ فى اتصال الشبكة</string>


    <!-- Help Notification Page-->
    <string name="help_page"> الاستغاثة </string>

    <!-- Rating Page-->
    <string name="rate_success"> تم إضافة تقييمك </string>
    <string name="rate_error"> حدث خطأ فى اتصال الشبكة</string>

</resources>
