<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.av.ibnammy.login.LoginActivity"
    >
    <data />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/splash_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:layout_marginBottom="50dp"
       >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="125dp"
            android:layout_weight="0.08"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/signInText"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@color/light_orange"
            android:layout_marginTop="15dp"

            >
        <Spinner
            android:paddingRight="35dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/family_array"
            android:theme="@style/spinnerTheme_black"
            android:backgroundTint="@color/light_black1"
            android:popupBackground="@color/white"

           />
        </FrameLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/phone_icon"
            android:hint="@string/phone_number"
            android:padding="9dp"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:inputType="phone"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/password_et_hint_icon"
            android:hint="@string/password_ed_hint"
            android:padding="8dp"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:inputType="textPassword"
            />
        </android.support.design.widget.TextInputLayout>

        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="حفظ كلمة المرور."
                android:textSize="14sp"
                android:textColor="@color/white"
                />

            <CheckBox android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_creds_cb"/>
        </TableRow>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/signin_btn_background"
            android:text="@string/signIn_btn_txt"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_forget_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="هل نسيت كلمة المرور؟!"
            android:layout_marginTop="5dp"
            android:textSize="15.5sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/go_signup_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="#DD9210"
        android:text="@string/signUp_btn_txt"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginTop="15dp"/>

</FrameLayout>
</ScrollView>
</layout>