<?xml version="1.0" encoding="utf-8"?>
<layout    xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"  >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.av.ibnammy.login.SignUp.SignUpActivity"
    android:fillViewport="true" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/splash_bg"
        >
        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:layout_marginBottom="45dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="125dp"
            android:layout_weight="0.08"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/signUp_btn_txt"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingBottom="15dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
          <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="4dp"
            android:hint="@string/phone_number"
            android:padding="9dp"
            android:textColorHint="@color/white"
            android:drawableRight="@mipmap/phone_icon"
            android:textSize="15sp"
            android:layout_weight="100"
            android:inputType="phone"
            android:gravity="right"
            android:backgroundTint="@color/white"
              />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:drawablePadding="4dp"
                android:drawableRight="@mipmap/password_et_hint_icon"
                android:gravity="right"
                android:hint="@string/password_ed_hint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:backgroundTint="@color/white"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <EditText
            android:id="@+id/repeat_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/password_et_hint_icon"
            android:hint="@string/confirm_password_ed_hint"
            android:padding="8dp"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:gravity="right"
            android:backgroundTint="@color/white"

            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:drawablePadding="4dp"
            android:hint="@string/email_ed_hint"
            android:padding="8dp"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@color/light_orange"
            android:layout_marginTop="9dp" >

        <Spinner
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/family_array"
            android:theme="@style/spinnerTheme_black"
            android:backgroundTint="@color/light_black1"
            android:popupBackground="@color/white"
            android:text="dfdfdfdfdf"
            />
        </FrameLayout>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/signin_btn_background"
            android:text="تسجيل"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_have_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:text="تملك حساب.. سجّل الدخول؟"
        android:background="#DD9210"/>
    </FrameLayout>
</ScrollView>
</layout>